Add comprehensive multi-project SubQuery GraphQL agent with React frontend
- Transform single-project server to support multiple IPFS CID-based projects
- Implement proper IPFS cat API with fallbacks for reliable file fetching
- Add LLM-powered project analysis for intelligent prompt generation
- Build complete TypeScript React frontend with project management and chat
- Add project deletion functionality with confirmation dialogs
- Fix chat state persistence across tab switches using functional updates
- Implement streaming chat responses with proper content appending
- Add suggested questions generation based on GraphQL schema analysis
- Support custom GraphQL endpoints during project registration
- Add comprehensive error handling for ReAct agent parsing failures
- Include project configuration editing with dynamic capabilities
- Implement proper CORS and API integration between frontend and backend

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,16 @@
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
 # LLM Model Configuration
-# Recommended: gpt-4o or stronger models for best performance
-# Options: gpt-4o, gpt-4o-mini, gpt-4, gpt-3.5-turbo
-LLM_MODEL=gpt-4o
+# Recommended: gpt-4o-mini for good balance of performance and compatibility
+# Options: gpt-4o-mini, gpt-4o, gpt-4, gpt-3.5-turbo
+# Note: Use gpt-4o if your API supports it for best analysis results
+LLM_MODEL=gpt-4o-mini
 
 # Server Configuration
 # Port for the FastAPI server (default: 8000)
 PORT=8000
+
+# IPFS Configuration
+# IPFS API URL for accessing files via cat API
+# Options: https://unauthipfs.subquery.network/ipfs/api/v0, https://dweb.link/api/v0, http://localhost:5001/api/v0
+IPFS_API_URL=https://unauthipfs.subquery.network/ipfs/api/v0
