--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain>=0.1.0",
     "langchain-core>=0.1.0",
     "langchain-openai>=0.1.0",
+    "pyyaml>=6.0.0",
 ]
 
 [build-system]
