--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,11 @@
-# OpenAI Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# OpenAI API Configuration
+OPENAI_API_KEY=your_openai_api_key_here
 
 # LLM Model Configuration
-# Recommended: gpt-4o-mini for good balance of performance and compatibility
-# Options: gpt-4o-mini, gpt-4o, gpt-4, gpt-3.5-turbo
-# Note: Use gpt-4o if your API supports it for best analysis results
 LLM_MODEL=gpt-4o-mini
 
-# Server Configuration
-# Port for the FastAPI server (default: 8000)
-PORT=8000
-
 # IPFS Configuration
-# IPFS API URL for accessing files via cat API
-# Options: https://unauthipfs.subquery.network/ipfs/api/v0, https://dweb.link/api/v0, http://localhost:5001/api/v0
 IPFS_API_URL=https://unauthipfs.subquery.network/ipfs/api/v0
+
+# Server Configuration
+PORT=8000
