--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
